--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Initial development was by Rob Drimmie. Significant contributions (especially fo
 
 Most of the code was written in 2001 and is terrible. Adding it to github is the first step in a concerted effort to clean the code up and make it useful.
 
-No licensing information is currently available but the intent is to release it under a BSD or MIT or other very liberal non-infectious OSS license but I haven't dug around enough to say which.
+Licensed under the MIT License.
